--- a/scss/index.scss
+++ b/scss/index.scss
@@ -200,7 +200,6 @@ path {
     transition: margin-right $detailsRevealTiming ease-in-out;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: center;
     position: relative;
     top: 56px;
     padding-bottom: 80px;
@@ -287,6 +286,10 @@ path {
                 width: 100%;
                 left: 0;
                 top: 0;
+            }
+
+            path {
+                display: none;
             }
         }
     }
@@ -393,6 +396,7 @@ path {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 }
 
 .descendants,
@@ -466,18 +470,22 @@ path {
     }
 }
 
-.spouses:hover .leaf {
-    svg {
-        z-index: -1;
-        path {
-            transition: all .1s ease-in-out;
-            stroke: var(--color_outline);
-            stroke-width: 4;
-        }
-    }
 
-    // transform: scale(1.05);
-    // z-index: 1;
+.spouses:hover,
+.spouses:hover + .descendants {
+    .leaf {
+        svg {
+            z-index: -1;
+            path {
+                transition: all .1s ease-in-out;
+                stroke: var(--color_outline);
+                stroke-width: 4;
+            }
+        }
+
+        // transform: scale(1.05);
+        // z-index: 1;
+    }
 }
 
 
@@ -542,12 +550,16 @@ path {
     &__image {
         background-color: var(--color_yellow);
         width: calc(var(--leafSize) + 12px);
-        // height: calc(var(--leafSize) + 12px);
+        height: calc(var(--leafSize) + 12px);
         max-width: calc(var(--leafSize) + 12px);
         max-height: calc(var(--leafSize) + 12px);
         overflow: hidden;
         border-radius: 50%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     }
+
 }
 
 .parentToChild__middleBar,
