--- a/scss/index.scss
+++ b/scss/index.scss
@@ -305,6 +305,9 @@ path {
     border-radius: 8px;
     background-color: var(--color_yellow);
     padding: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
     &:hover {
         cursor: pointer;
@@ -334,7 +337,7 @@ path {
         background-image: url("../assets/img/wavy-sm.svg");
         background-repeat: no-repeat;
         background-position: top;
-        background-size: contain;
+        background-size: cover;
         background-size: 100%;
         height: 400px;
         z-index: -1;
@@ -345,9 +348,26 @@ path {
     display: flex;
 }
 
-// .detailsPanel__item {
-//     display: flex;
-// }
+.detailsPanel__item {
+    position: relative;
+
+    &:hover {
+        &:before {
+            content: "";
+            position: absolute;
+            width: calc(100% + 16px);
+            height: calc(100% + 16px);
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            border-radius: 8px;
+            background-color: rgba(0,0,0,.08);
+            transform: translate(-8px, -8px);
+            z-index: -1;
+        }
+    }
+}
 
 .detailsPanel__icon {
     width: 24px;
@@ -363,10 +383,9 @@ path {
     border-radius: 50%;
     background-color: var(--color_yellow);
     overflow: hidden;
-
-    img {
-        max-width: 100%;
-    }
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .detailsPanel__realtiveType {
@@ -376,16 +395,16 @@ path {
 .detailsPanel__profileImage {
     max-width: var(--profileImageSize);
     height: var(--profileImageSize);
-
-    img {
-        max-width: var(--profileImageSize);
-        width: var(--profileImageSize);
-        height: var(--profileImageSize);
-        border-radius: 8px;
-        display: block;
-        background-color: lightgray;
-        background-color: var(--color_yellow);
-    }
+    max-width: var(--profileImageSize);
+    width: var(--profileImageSize);
+    height: var(--profileImageSize);
+    border-radius: 8px;
+    display: block;
+    background-color: lightgray;
+    background-color: var(--color_yellow);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .formActions {
@@ -482,7 +501,7 @@ path {
             z-index: -1;
             path {
                 transition: all .1s ease-in-out;
-                stroke: var(--color_outline);
+                // stroke: var(--color_outline);
                 stroke-width: 4;
             }
         }
@@ -510,20 +529,22 @@ path {
         height: calc(var(--leafSize) + 20px);
         top: -4px;
         border-radius: 100px;
-        box-shadow: 0 0 0 4px white inset, 0 0 0 4px var(--color_outline);
+        box-shadow: 0 0 0 4px rgba(white, 0) inset, 0 0 0 4px var(--color_outline);
         opacity: 0;
         transform: scale(.8);
-        transition: transform $detailsRevealTiming ease-in-out;
+        transition: transform $detailsRevealTiming cubic-bezier(.66,.23,.33,1.02);
     }
 
     &:active {
         // transform: scale(.95);
-        transition: all .05s ease-in-out
+        transition: all .05s cubic-bezier(.66,.23,.33,1.02)
     }
 
     &.active:before {
+        transition: transform $detailsRevealTiming cubic-bezier(.66,.23,.33,1.02);
         opacity: 1;
         transform: scale(1);
+        box-shadow: 0 0 0 4px rgba(white, 1) inset, 0 0 0 4px var(--color_outline);
     }
 
     > * {
@@ -562,6 +583,12 @@ path {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+
+        &.highlight {
+            transform: scale(1.1);
+            transition: all $detailsRevealTiming ease-in-out;
+            z-index: -1;
+        }
     }
 
 }
@@ -912,6 +939,7 @@ button,
             background-color: rgba($brand, .08);
             cursor: pointer;
         }
+
         &:active {
             background-color: rgba($brand, .04);
             cursor: pointer;
@@ -987,12 +1015,44 @@ button,
     padding: 0px;
 }
 
-.u-pad_4 {
+.u-pad_1 {
     padding: 16px;
+}
+
+.u-pad_2 {
+    padding: 16px;
+}
+
+.u-pad_3 {
+    padding: 24px;
+}
+
+.u-pad_4 {
+    padding: 32px;
 }
 
 .u-pad-b_10 {
     padding-bottom: 80px;
+}
+
+.u-mar_0 {
+    margin: 0px;
+}
+
+.u-mar_1 {
+    margin: 16px;
+}
+
+.u-mar_2 {
+    margin: 16px;
+}
+
+.u-mar_3 {
+    margin: 24px;
+}
+
+.u-mar_4 {
+    margin: 32px;
 }
 
 .u-mar-lr_auto {
@@ -1086,6 +1146,14 @@ button,
 
 .u-flex_1 {
     flex: 1;
+}
+
+.u-fd_column {
+    flex-direction: column;
+}
+
+.u-ai_center {
+    align-items: center;
 }
 
 .u-o_75 {
