--- a/scss/index.scss
+++ b/scss/index.scss
@@ -388,6 +388,10 @@ path {
     background-repeat: no-repeat;
 }
 
+#detailsPanel__edit {
+    padding-bottom: 128px;
+}
+
 .detailsPanel__realtiveType {
     color: var(--color_dark_gray);
 }
@@ -583,11 +587,19 @@ path {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+    }
 
-        &.highlight {
+    &.highlight {
+
+        .leaf__image,
+        .leaf_caption {
             transform: scale(1.1);
             transition: all $detailsRevealTiming ease-in-out;
-            z-index: -1;
+            z-index: 2;
+        }
+
+        .leaf_caption {
+            z-index: 5;
         }
     }
 
@@ -813,6 +825,15 @@ button,
 
         &:hover {
             background-color: rgba(black, .05);
+        }
+
+        &.danger {
+            background-color: white;
+            color: var(--color_danger);
+
+            &:hover {
+                background-color: white;
+            }
         }
     }
 
@@ -1098,6 +1119,22 @@ button,
 
 .u-mar-t_4 {
     margin-top: 32px;
+}
+
+.u-mar-t_5 {
+    margin-top: 40px;
+}
+
+.u-mar-t_6 {
+    margin-top: 48px;
+}
+
+.u-mar-t_7 {
+    margin-top: 56px;
+}
+
+.u-mar-t_8 {
+    margin-top: 64px;
 }
 
 .u-mar-b_1 {
