--- a/scss/index.scss
+++ b/scss/index.scss
@@ -164,7 +164,8 @@ path {
         // background-color: var(--color_background);
 
         #familyTree {
-            margin-right: var(--detailsWidth);
+            // margin: var(--detailsWidth);
+            width: calc(100vw - var(--detailsWidth));
         }
 
         // .spouseToSpouse__line {
@@ -199,15 +200,34 @@ path {
     }
 }
 
+#myTree__list {
+    max-width: 800px;
+    margin: 0 auto;
+
+    .myTree__item {
+        border-radius: 8px;
+        text-decoration: none;
+
+        &:hover {
+            background-color:var(--brand_lighter);
+        }
+
+        &:active {
+            background-color: rgba(0,0,0,.05);
+        }
+    }
+}
+
 #familyTree {
-    flex: 1;
-    transition: margin-right $detailsRevealTiming ease-in-out;
+    // flex: 1;
+    transition: width $detailsRevealTiming ease-in-out;
     display: flex;
     flex-wrap: nowrap;
     position: relative;
     top: 56px;
     padding-bottom: 80px;
     overflow: scroll;
+    width: 100vw;
 
     &:focus {
         outline: 0 solid transparent;
@@ -363,6 +383,7 @@ path {
             bottom: 0;
             border-radius: 8px;
             background-color: rgba(0,0,0,.08);
+            background-color: var(--brand_lighter);
             transform: translate(-8px, -8px);
             z-index: -1;
         }
@@ -374,7 +395,15 @@ path {
     text-align: center;
     font-size: 20px;
     color: var(--color_gray);
+    color: var(--brand);
     vertical-align: middle;
+    opacity: .3;
+}
+
+.detailsPanel__fullName {
+    &:empty {
+        display: none;
+    }
 }
 
 .detailsPanel__img {
@@ -411,6 +440,16 @@ path {
     background-position: center;
 }
 
+.detailsEditInput__profile_photo {
+    min-height: 200px;
+    background-color: var(--color_yellow);
+    width: 200px;
+    border-radius: 8px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .formActions {
     position: fixed;
     right: 0;
@@ -442,6 +481,14 @@ path {
         &:only-child {
             margin-left: var(--leafSpacing);
             margin-right: var(--leafSpacing);
+        }
+
+        &:first-child {
+            margin-left: 8px;
+        }
+
+        &:last-child {
+            margin-right: 16px;
         }
     }
     // position: relative;
@@ -491,10 +538,6 @@ path {
 
 .spouses .leaf svg {
     z-index: -2;
-
-    path {
-        stroke-linejoin: arcs;
-    }
 }
 
 
@@ -505,7 +548,7 @@ path {
             z-index: -1;
             path {
                 transition: all .1s ease-in-out;
-                // stroke: var(--color_outline);
+                stroke: var(--color_outline);
                 stroke-width: 4;
             }
         }
@@ -568,6 +611,8 @@ path {
         white-space: nowrap;
         max-width: calc(var(--spacer) * 17);
         overflow: hidden;
+        backface-visibility: hidden;
+        z-index: 5;
 
         &:empty:before {
             content: "No name";
@@ -587,19 +632,21 @@ path {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+        backface-visibility: hidden;
+        z-index: 2;
+    }
+
+    &__image,
+    &_caption {
+        transition: transform $detailsRevealTiming ease-in-out;
     }
 
     &.highlight {
 
         .leaf__image,
         .leaf_caption {
-            transform: scale(1.1);
-            transition: all $detailsRevealTiming ease-in-out;
-            z-index: 2;
-        }
-
-        .leaf_caption {
-            z-index: 5;
+            transform: scale3d(1.2, 1.2, 1.2);
+            transition: transform $detailsRevealTiming ease-in-out;
         }
     }
 
@@ -958,6 +1005,7 @@ button,
 
         &:hover {
             background-color: rgba($brand, .08);
+            background-color: var(--brand_lighter);
             cursor: pointer;
         }
 
@@ -994,6 +1042,18 @@ button,
 .u_disabled {
     pointer-events: none;
     opacity: .5;
+}
+
+.u-text_lowest {
+    color: rgba(black, .55);
+}
+
+.u-text_low {
+    color: rgba(black, .65);
+}
+
+.u-font-size_14 {
+    font-size: 14px;
 }
 
 .u-p_fixed {
@@ -1107,6 +1167,10 @@ button,
 
 .u-mar-b_point5 {
     margin-bottom: 4px;
+}
+
+.u-mar-t_1 {
+    margin-top: 8px;
 }
 
 .u-mar-t_2 {
