--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,12 @@
   --color_gray: #BDBDBD;
   --color_dark_gray: #828282;
   --color_yellow: #FDD3A6;
-  --color_text: #333333;
+  --color_text: var(--brand);
   --color_border: #D9DFE0;
   --color_background: #fcfcfc;
   --color_danger: #B90B00;
   --brand_lighter: #E3F2F5;
-  --navHeight: 104px;
+  --navHeight: 88px;
   --navDecorationHeight: 24px;
   --detailsWidth: 352px;
   --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
@@ -23,7 +23,8 @@
   --leafCaptionShadow: 0 0 12px rgba(0,0,0, .2);
   --detailsPanelDecorationTopOffset: 0;
   --spacer: 8px;
-  --accountMenuSize: 56px; }
+  --accountMenuSize: 56px;
+  --detailsPanelImgSize: 48px; }
 
 * {
   box-sizing: border-box; }
@@ -34,7 +35,9 @@ body {
   padding: 0;
   margin: 0;
   flex-direction: column;
-  color: var(--color_text); }
+  color: var(--color_text);
+  overflow-x: hidden;
+  overflow-y: scroll; }
 
 ul,
 ol {
@@ -53,7 +56,7 @@ h6:first-child {
 h6 {
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 1;
+  letter-spacing: .5px;
   font-size: 12px;
   color: var(--brand); }
 
@@ -151,10 +154,15 @@ path {
     #myTree__list .myTree__item:active {
       background-color: rgba(0, 0, 0, 0.05); }
 
+#branchContainer {
+  display: flex;
+  max-width: 100vw; }
+
 #familyTree {
   transition: width 0.2s ease-in-out;
   display: flex;
   flex-wrap: nowrap;
+  justify-content: center;
   position: relative;
   top: 56px;
   padding-bottom: 80px;
@@ -216,6 +224,8 @@ path {
         top: 0; }
       #familyTree.view_list .leaf path {
         display: none; }
+  #familyTree > .branch {
+    will-change: transform; }
 
 #accountMenu {
   width: var(--accountMenuSize);
@@ -285,12 +295,15 @@ path {
   vertical-align: middle;
   opacity: .3; }
 
-.detailsPanel__fullName:empty {
-  display: none; }
+.detailsPanel__fullName {
+  opacity: .5;
+  color: var(--brand); }
+  .detailsPanel__fullName:empty {
+    display: none; }
 
 .detailsPanel__img {
-  width: 64px;
-  height: 64px;
+  width: var(--detailsPanelImgSize);
+  height: var(--detailsPanelImgSize);
   border-radius: 50%;
   background-color: var(--color_yellow);
   overflow: hidden;
@@ -301,8 +314,9 @@ path {
 #detailsPanel__edit {
   padding-bottom: 128px; }
 
-.detailsPanel__realtiveType {
-  color: var(--color_dark_gray); }
+.detailsPanel__relativeType {
+  opacity: .5;
+  color: var(--brand); }
 
 .detailsPanel__profileImage {
   max-width: var(--profileImageSize);
@@ -318,7 +332,8 @@ path {
   background-repeat: no-repeat;
   background-position: center; }
 
-.detailsEditInput__profile_photo {
+input[class*="profile_photo"],
+input[name*="profile_photo"] {
   min-height: 200px;
   background-color: var(--color_yellow);
   width: 200px;
@@ -490,6 +505,9 @@ path {
 
 #view-preferences {
   right: 0; }
+
+[data-view] {
+  padding-top: 64px; }
 
 @media screen and (max-width: 640px) {
   :root {
@@ -769,11 +787,17 @@ button,
 .u-font-size_14 {
   font-size: 14px; }
 
+.u-font-size_13 {
+  font-size: 13px; }
+
 .u-p_fixed {
   position: fixed; }
 
 .u-bold {
   font-weight: bold; }
+
+.u-italic {
+  font-style: italic; }
 
 .u-align-items_center {
   align-items: center; }
