--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,12 +7,12 @@ $brand: #002831;
     --color_gray: #BDBDBD;
     --color_dark_gray: #828282;
     --color_yellow: #FDD3A6;
-    --color_text: #333333;
+    --color_text: var(--brand);
     --color_border: #D9DFE0;
     --color_background: #fcfcfc;
     --color_danger: #B90B00;
     --brand_lighter: #E3F2F5;
-    --navHeight: 104px;
+    --navHeight: 88px;
     --navDecorationHeight: 24px;
     --detailsWidth: 352px;
     --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
@@ -27,6 +27,7 @@ $brand: #002831;
     --detailsPanelDecorationTopOffset : 0;
     --spacer: 8px;
     --accountMenuSize: 56px;
+    --detailsPanelImgSize: 48px;
 }
 
 * {
@@ -40,6 +41,8 @@ body {
     margin: 0;
     flex-direction: column;
     color: var(--color_text);
+    overflow-x: hidden;
+    overflow-y: scroll;
 };
 
 ul,
@@ -63,7 +66,7 @@ h6 {
 h6 {
     font-weight: bold;
     text-transform: uppercase;
-    letter-spacing: 1;
+    letter-spacing: .5px;
     font-size: 12px;
     color: var(--brand);
 }
@@ -218,11 +221,17 @@ path {
     }
 }
 
+#branchContainer {
+    display: flex;
+    max-width: 100vw;
+}
+
 #familyTree {
     // flex: 1;
     transition: width $detailsRevealTiming ease-in-out;
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
     position: relative;
     top: 56px;
     padding-bottom: 80px;
@@ -317,6 +326,10 @@ path {
             }
         }
     }
+
+    > .branch {
+        will-change: transform
+    }
 }
 
 #accountMenu {
@@ -401,14 +414,17 @@ path {
 }
 
 .detailsPanel__fullName {
+    opacity: .5;
+    color: var(--brand);
+
     &:empty {
         display: none;
     }
 }
 
 .detailsPanel__img {
-    width: 64px;
-    height: 64px;
+    width: var(--detailsPanelImgSize);
+    height: var(--detailsPanelImgSize);;
     border-radius: 50%;
     background-color: var(--color_yellow);
     overflow: hidden;
@@ -421,8 +437,9 @@ path {
     padding-bottom: 128px;
 }
 
-.detailsPanel__realtiveType {
-    color: var(--color_dark_gray);
+.detailsPanel__relativeType {
+    opacity: .5;
+    color: var(--brand);
 }
 
 .detailsPanel__profileImage {
@@ -440,7 +457,18 @@ path {
     background-position: center;
 }
 
-.detailsEditInput__profile_photo {
+// .detailsEditInput__profile_photo {
+//     min-height: 200px;
+//     background-color: var(--color_yellow);
+//     width: 200px;
+//     border-radius: 8px;
+//     background-size: cover;
+//     background-position: center;
+//     background-repeat: no-repeat;
+// }
+
+input[class*="profile_photo"],
+input[name*="profile_photo"] {
     min-height: 200px;
     background-color: var(--color_yellow);
     width: 200px;
@@ -695,6 +723,11 @@ path {
 
 #view-preferences {
     right: 0;
+}
+
+[data-view] {
+    padding-top: 64px;
+
 }
 
 
@@ -1057,12 +1090,20 @@ button,
     font-size: 14px;
 }
 
+.u-font-size_13 {
+    font-size: 13px;
+}
+
 .u-p_fixed {
     position: fixed;
 }
 
 .u-bold {
     font-weight: bold;
+}
+
+.u-italic {
+    font-style: italic;
 }
 
 .u-align-items_center {
